web/feeds/frontend: allow set graph min/max on frontend, fixed graph on mobile, added track to mobile

--- a/web/feeds/frontend/css/feeds.css
+++ b/web/feeds/frontend/css/feeds.css
@@ -23,6 +23,10 @@ body {
     margin-top: 22px !important;
 }
 
+.dg .cr.object {
+    border-left: 3px solid #1ed36f;
+}
+
 #container {
     background: #080808;
     width: 80%;
